--- a/code/.gitignore
+++ b/code/.gitignore
@@ -14,7 +14,8 @@ out/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
-
+.DS_Store
+**/.DS_Store
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
